FIX: CA map view overlapping menu bar

--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -5,10 +5,8 @@
 #Map_of_the_counties_of_California_without_legend{
   display: block;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 100px;
+  left: 100px;
 }
 
 ul {
